 * The application no longer does agent authentication.  The dialplan needs to
   perform this function before running AgentLogin.  If the agent is already
   logged in, dialplan will continue with the AGENT_STATUS channel variable
   set to ALREADY_LOGGED_IN.

AgentMonitorOutgoing
------------------
 * Application removed.  It was a holdover from when AgentCallbackLogin was
   removed.

ForkCDR
------------------
 * ForkCDR no longer automatically resets the forked CDR. See the 'r' option
   for more information.

 * Variables are no longer purged from the original CDR. See the 'v' option for
   more information.

 * The 'A' option has been removed. The Answer time on a CDR is never updated
   once set.

 * The 'd' option has been removed. The disposition on a CDR is a function of
   the state of the channel and cannot be altered.

 * The 'D' option has been removed. Who the Party B is on a CDR is a function
   of the state of the respective channels, and cannot be altered.

 * The 'r' option has been changed. Previously, ForkCDR always reset the CDR
   such that the start time and, if applicable, the answer time was updated.
   Now, by default, ForkCDR simply forks the CDR, maintaining any times. The
   'r' option now triggers the Reset, setting the start time (and answer time
   if applicable) to the current time.

 * The 's' option has been removed. A variable can be set on the original CDR
   if desired using the CDR function, and removed from a forked CDR using the
   same function.

 * The 'T' option has been removed. The concept of DONT_TOUCH and LOCKED no
   longer applies in the CDR engine.

 * The 'v' option now prevents the copy of the variables from the original CDR
   to the forked CDR. Previously the variables were always copied but were
   removed from the original. Removing variables from a CDR can have unintended
   side effects - this option allows the user to prevent propagation of